Add UserRegister handler
